--- a/sdormitory-biz/pom.xml
+++ b/sdormitory-biz/pom.xml
@@ -69,7 +69,6 @@
             <optional>true</optional>
         </dependency>
 
-
         <!--<dependency>-->
         <!--<groupId>org.springframework.boot</groupId>-->
         <!--<artifactId>spring-boot-devtools</artifactId>-->
@@ -243,6 +242,16 @@
             <artifactId>easyexcel</artifactId>
             <version>2.2.6</version>
         </dependency>
+
+        <!--容联云依赖配置-->
+        <dependency>
+            <groupId>com.cloopen</groupId>
+            <artifactId>java-sms-sdk</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+
+
 
 
 
